--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -10,12 +10,7 @@
         <input name="title" value="<%= @post.title %>">
       </div>
       <h5>本文</h5>
-      <label for="myImage">
-      　画像を選択する
-        <input type="file" id="myImage" accept="image/*" name="image">
-        <img id="preview">
-      </label>
-
+      <input type="file" name="image">
       <textarea name="content"><%= @post.content %></textarea>
       <div class="button">
         <input type="submit" value="編集を保存する">
