--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,156 +1,17 @@
-header{
-  background-color:#FFFFCC;
-  height:85px;
-}
- header a{
-  text-decoration:none;
-  color:#333333;
-  font-weight:bold;
-  letter-spacing:1px;
-}
-.logo{
-  padding:0 30px;
-  line-height:85px;
-  float:left;
-}
-.logo a{
-  font-size:27px;
-}
-.header-list li{
-  padding:0 20px;
-  line-height:85px;
-  list-style-type:none;
-  float:left;
-}
-.home{
-  background-image:url("/green.png");
-  background-size:cover;
-  width:100%;
-  height:650px;
-}
-.container{
-  width:1170px;
-  margin:0 auto;
-}
-.home-title{
-  padding:80px 0 30px 0;
-}
-.home-title h1,.home-text h2{
-  color:#A52A2A;
-  text-align:center;
-}
-.home-title h1{
-  font-size:90px;
-}
-.home-text{
-  display:none;
-}
-.home-text h2{
-  font-family:serif;
-}
-.flash{
-  background-color:#C2EEFF;
-  color:#333333;
-  padding:10px 0;
-  text-align:center;
-}
-.container{
-  width:1170px;
-  margin:0 auto;
-}
-/* users, posts, bookmarks 共通　*/
-
-.users, .posts, .bookmarks{
-  padding:50px 0;
-  text-align:center;
-}
-.title{
-  padding-bottom:30px;
-}
-.title h1{
-  font-size:50px;
-  letter-spacing:2px;
-}
-.form{
-  background-color:#FFDBC9;
-  border:1px solid #d8dadf;
-  border-radius:20px;
-  width:580px;
-  padding:80px 0;
-  margin:auto;
-}
-.password, .image{
-  margin-top:40px;
-}
-.button{
-  margin-top:40px;
-}
-.button input{
-  background-color:#EEEEEE;
-  font-weight:bold;
-  width:160px;
-  margin-top:30px;
-  letter-spacing:2px;
-}
-
-/* users */
-
-.edit-mail{
-  margin-top:40px;
-}
-.name input, .mail input, .password input, .image input, .diary-name input{
-  width:340px;
-  height:30px;
-}
-.image input{
-  background-color:white;
-  line-height:30px;
-  border:1px solid #666666;
-}
-.users img{
-  height:120px;
-  width:120px;
-  border-radius:40%;
-  margin-bottom:20px;
-}
-/* posts */
-
-.form textarea{
-  width:400px;
-  height:300px;
-  border-radius:10px
-}
-.post-image input{
-  width:340px;
-  height:30px;
-  background-color:white;
-  line-height:30px;
-  border:1px solid #666666;
-}
-.post-item{
-  background-color:#FFFFEE;
-  padding:15px 0;
-  margin:0 10px;
-  border:1px solid #d8dadf;
-  border-radius:10px;
-}
-.post-title{
-  background-color:white;
-  margin:0 10px 10px 10px;
-  border:1px solid #d8dadf;
-  border-radius:10px;
-}
-.post-text{
-  background-color:white;
-  padding:10px 0;
-  margin:0 10px;
-  border:1px solid #d8dadf;
-  border-radius:10px;
-}
-.posts-form-bottom p{
-  float:right;
-}
-.posts img{
-  width:400px;
-  height:300px;
-}
+/*
+ * This is a manifest file that'll be compiled into application.css, which
+ * will include all the files listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets,
+ * vendor/assets/stylesheets, or vendor/assets/stylesheets of plugins, if any,
+ * can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear
+ * at the bottom of the compiled file so the styles you add here take
+ * precedence over styles defined in any styles defined in the other CSS/SCSS
+ * files in this directory. It is generally better to create a new file per
+ * style scope.
+ *
+ *= require_tree .
+ *= require_self
+ */
