--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,21 +27,17 @@
               <li><%= link_to("ブックマーク一覧", "/bookmarks/index") %></li>
               <li><%= link_to("ログアウト", "/users/logout", {method: "post"}) %></li>
             <% else %>
-              <li id="hoge"><%= link_to("新規登録", "/users/new") %></li>
+              <li ><%= link_to("新規登録", "/signup") %></li>
               <li><%= link_to("ログイン", "/users/login") %></li>
             <% end %>
           </ul>
         </div>
-
-
     </header>
 
-    <% if flash[:notice] %>
-      <div class="flash">
-        <%= flash[:notice] %>
-      </div>
-    <% end %>
+      <% flash.each do |message_type, message| %>
+        <div class="flash alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
     <%= yield %>
-
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
