--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
       <h1>アカウント</h1>
     </div>
     <div class="form">
-      <img src="<%= "/user_images/#{@user.image_name}" %>">
+      <%= gravatar_for @user %>
       <h2><%= @user.name %></h2>
       <p><%= @user.email %></p>
       <div class="form-bottom">
